# VibeTea

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PRD.md  README.md  SECURITY.md  fly.toml  lefthook.yml  ralph.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/vibetea-monitor/: action.yml
.github/workflows/: ci-with-monitor.yml  ci.yml
.sdd/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  SECURITY.md  STACK.md  STRUCTURE.md  TESTING.md
.sdd/memory/: constitution.md
client/: .env.example  eslint.config.js  index.html  lighthouserc.cjs  lighthouserc.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
client/.storybook/: main.ts  preview.ts
client/scripts/: check-reduced-motion.mjs  generate-ascii.mjs
client/src/: App.tsx  index.css
client/src/__tests__/: App.test.tsx  events.test.ts  formatting.test.ts
client/src/components/: ConnectionStatus.stories.tsx  ConnectionStatus.tsx  EventStream.stories.tsx  EventStream.tsx  Heatmap.stories.tsx  Heatmap.tsx  SessionOverview.stories.tsx  (+2 more)
discovery/: OPEN_QUESTIONS.md  SPEC.md  STATE.md
discovery/archive/: DECISIONS.md  ITERATIONS.md  RESEARCH.md  REVISIONS.md
monitor/: .env.local.example  Cargo.toml
monitor/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs  parser.rs  persistence.rs  privacy.rs  sender.rs  types.rs  watcher.rs
monitor/src/trackers/: agent_tracker.rs  file_history_tracker.rs  mod.rs  project_tracker.rs  skill_tracker.rs  stats_tracker.rs  todo_tracker.rs
monitor/src/tui/: app.rs  input.rs  mod.rs  terminal.rs  ui.rs
monitor/src/tui/widgets/: credentials.rs  event_stream.rs  header.rs  logo.rs  mod.rs  setup_form.rs  size_warning.rs  stats_footer.rs
monitor/src/utils/: debounce.rs  mod.rs  session_filename.rs  tokenize.rs
monitor/tests/: enhanced_tracking_test.rs  env_key_test.rs  key_export_test.rs  privacy_compliance_test.rs  privacy_test.rs  sender_recovery_test.rs
retro/: P2.md  P3.md  P4.md  P5.md  P6.md  P7.md  P8-session-metrics.md  P8.md
server/: .env.example  Cargo.toml
server/src/: auth.rs  broadcast.rs  config.rs  error.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  session.rs  supabase.rs  types.rs
server/tests/: auth_privacy_test.rs  unsafe_mode_test.rs
specs/001-supabase-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vibetea/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-client-frontend-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-supabase-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-monitor-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-monitor-gh-actions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-monitor-enhanced-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
supabase/: .env.local.example  config.toml
supabase/migrations/: 001_public_keys.sql  20260203000000_create_events_table.sql  20260203000001_create_functions.sql
(+93 files in other folders)
