[workspace]
resolver = "2"
members = ["monitor", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VibeTea Contributors"]
license = "MIT"
repository = "https://github.com/vibetea/vibetea"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File watching
notify = "8.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
base64 = "0.22"
subtle = "2.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
gethostname = "1.0"

# Testing
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
